--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -204,7 +204,10 @@ a {
 		}
 	
 		svg{
-			fill: rgba(255, 255, 255, 0);
+			fill-opacity: 0;
+			stroke: white;
+			stroke-width: 4px;
+			stroke-opacity: 1;
 			width: 50px;
 			height: 25px;
 			margin-top: 50%;
