--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -50,14 +50,20 @@ a {
 	background-color: rgba(230, 64, 64, 0.699);
 	padding: 40px 0;
 	width: 100%;
+	height: 100vh;
 }
 
 .firstExample__slider{
-	width: 810px; //+20 for box-shadow
-	height: 710px;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	/* position: relative;
+	margin: 0 auto; */
+	// padding: 0 30px;
+	// width: 867.6px; //810
+	height: 710px;//needs to add +20*2 for box-shadow
+	
 
 	/* @include lg1360-block{
 		width: 688px;
@@ -68,40 +74,31 @@ a {
 	@include lg-block{
 		width: 584px;
 		height: 512px;
-		right: 0;
-		top: 100px;
 	}
 
 	@include md-block{
 		width: 730px;
 		height: 640px;
-		right: auto;
-		top: auto;
-		bottom: 70px;
-		left: 50%;
-		transform: translate(-50%);
 	}
 
 	@include sm-block{
 		width: 95vw;
 		height: 83.3vw;
-		bottom: 50px;
 	}
 }
 
 .GnativeCarousel{
 	// background-color: rgba(0, 0, 0, 0.63);
 	// border: 1px solid yellow;
-	position: absolute;
 
 	&__staticItem{
 		position: absolute;
 		top: 0;
 		border-radius: 45px;
-		background-color: rgba(128, 128, 128, 0.589);
+		background-color: rgba(85, 85, 85, 0.445);
 		box-shadow: 0px 0px 40px 5px rgba(85, 85, 85, 0.788);
 		width: 340px; //phone
-		height: 710px; //phone
+		height: 710px;	//710px; //phone
 	
 		/* @include lg1360-block{
 			width: 289px;
@@ -133,6 +130,7 @@ a {
 		height: 100%;
 	
 		img{
+			// box-shadow: 0px 0px 400px 1000px gray;
 			position: absolute;
 			border-radius: 30px;
 			width: 320px;
