--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -54,6 +54,7 @@ a {
 }
 
 .firstExample__slider{
+  // border: 1px solid white;
 	/* position: absolute;
 	top: 50%;
 	left: 50%;
@@ -189,4 +190,16 @@ a {
 			transform: translate(0px, -50%);
 		}
 	}
+}
+
+.message{
+  display: none;
+  font-family: sans-serif;
+  color: white;
+  font-size: 6vw;
+  text-align: center;
+
+  @media (min-width: 769px) and (max-width: 960px){
+    display: block;
+  }
 }
