--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -39,50 +39,43 @@ a {
 }
 
 .container {
+  border: 1px solid black;
 	@include wrapper();
-	position: relative;
-	overflow: hidden;
+  position: relative;
+  // overflow: hidden;
+  // padding: 100px 0;
 }
 
 //slider--------------------
 
 .firstExample{
 	background-color: rgba(230, 64, 64, 0.699);
-	padding: 40px 0;
+	padding: 120px 0 0 0;
 	width: 100%;
 	height: 100vh;
 }
 
+.firstExample__container{
+  text-align: center;
+}
+
 .firstExample__slider{
-  // border: 1px solid white;
+  border: 1px solid white;
 	/* position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%); */
 	position: relative;
-	margin: 0 auto;
-
-	@include lg-block{
-		width: 584px;
-		height: 512px;
-	}
-
-	@include md-block{
-		width: 730px;
-		height: 640px;
-	}
-
-	@include sm-block{
-		width: 95vw;
-		height: 83.3vw;
-	}
+	display: inline-block;
 }
 
 .GnativeCarousel{
 
 	&__staticItem{
 		position: absolute;
-		top: 0;
+    top: -40px;
+    left: 50%;
+    transform: translate(-50%);
 		border-radius: 45px;
 		background-color: rgba(85, 85, 85, 0.445);
 		box-shadow: 0px 0px 40px 5px rgba(85, 85, 85, 0.788);
@@ -90,48 +83,42 @@ a {
 		height: 710px;
 	
 		@include lg-block{
-			width: 245px;
-			height: 512px;
+      width: 245px;
+      height: 512px;
+      top: -30px;			
 		}
 	
 		@include md-block{
-			width: 306px;
-			height: 640px;
+      width: 32vw;
+      height: 66vw;
+      top: -4vw;
 		}
 	
 		@include sm-block{
 			width: 39.8vw;
-			height: 83.3vw;
+			height: 82vw;
 		}
 	}
 
 	&__itemsContainer{
-		display: flex;
-		align-items: center;
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
 	
 		img{
 			position: absolute;
 			border-radius: 30px;
-			width: 320px;
-			height: 645px;
+      width: 320px;
+      top: 50%;
+      transform: translateY(-50%);
 	
 			@include lg-block{
 				width: 231px;
-				height: 465px;
 			}
 	
 			@include md-block{
-				width: 288px;
-				height: 581px;
+        width: 30vw;
 			}
 	
 			@include sm-block{
 				width: 37.5vw;
-				height: 75.6vw;
 			}
 		}
 	}
@@ -201,5 +188,6 @@ a {
 
   @media (min-width: 769px) and (max-width: 960px){
     display: block;
+    margin-top: 40px;
   }
 }
